force-app/main/default/objects/Combobox_picklist_attributes__mdt/Combobox_picklist_attributes__mdt.object-meta.xml
<CustomObject>
    <description>Type attributes for dropdown menu in table</description>
    <label>Combobox picklist attributes</label>
    <pluralLabel>Combobox picklist attributes</pluralLabel>
</CustomObject>