force-app/main/default/objects/Combobox_picklist_attributes__mdt/fields/Api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Api_field_name__c</fullName>
    <description>Api name of field that holds picklist values</description>
    <inlineHelpText>Api name of field that holds picklist values</inlineHelpText>
    <label>Api field name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>