force-app/main/default/objects/Combobox_picklist_attributes__mdt/fields/Choice_column_field_name__c.field-meta.xml
<CustomField>
    <fullName>Choice_column_field_name__c</fullName>
    <description>Column name of column that holds selected values per record (in the component)</description>
    <label>Choice column field name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>