force-app/main/default/objects/Combobox_picklist_attributes__mdt/fields/Editable_if_true__c.field-meta.xml
<CustomField>
    <fullName>Editable_if_true__c</fullName>
    <description>If picklist availability depends on checkbox column, specify api name here</description>
    <inlineHelpText>If picklist availability depends on checkbox column, specify api name here</inlineHelpText>
    <label>Editable if true</label>
    <length>180</length>
    <type>Text</type>
</CustomField>